--- a/dada/templates/archive_footer_widget.tmpl
+++ b/dada/templates/archive_footer_widget.tmpl
@@ -1,15 +1,10 @@
 <!-- begin archive_footer_widget.tmpl -->
 
+	<!-- tmpl_include newsfeed_widget.tmpl --> 
 
+	<!-- tmpl_var archive_send_form -->
 
-<!-- tmpl_include newsfeed_widget.tmpl --> 
-
-<!-- tmpl_var archive_send_form -->
-
-<!-- tmpl_var archive_search_form -->
-
-<hr >
-
-<!-- tmpl_var archive_subscribe_form -->
-
+	<div id="modal_subscribe_form">
+		<!-- tmpl_var archive_subscribe_form -->
+	</div>
 <!-- end archive_footer_widget.tmpl -->
