--- a/dada/templates/archive_nav_table_widget.tmpl
+++ b/dada/templates/archive_nav_table_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- begin archive_nav_table_widget.tmpl --> 
 
 <div class="row">
-	<div class="small-4 columns text-left">
+	<div class="medium-5 columns medium-text-left">
 		<!-- tmpl_if prev_subject --> 
 			&lt;&lt; Previous
 			<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->&id=<!-- tmpl_var prev -->">
@@ -11,12 +11,12 @@
 				 &nbsp;
 		<!-- /tmpl_if --> 
 	</div>
-	<div class="small-4 columns text-center">
+	<div class="medium-2 columns medium-text-center">
 	   	<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->">
-			Archive Index
+			Index
 		</a>
 	</div>
-	<div class="small-4 columns text-right">
+	<div class="medium-5 columns medium-text-right">
 	<!-- tmpl_if next_subject --> 
 		Next 
 		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->&id=<!-- tmpl_var next -->">
