--- a/dada/templates/list_activity_screen.tmpl
+++ b/dada/templates/list_activity_screen.tmpl
@@ -30,13 +30,13 @@
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 </form>
 
-<h1>Subscription Trends</h1> 
+<h3>Subscription Trends</h3> 
 
 <form> 
     <div class="row">
        <div class="large-12 columns">
            <label for="display_the_last">
-               Display the last 
+               Display the last:
                <select id="amount" id="display_the_last"> 
                     <option value="7">7 days</option>
                     <option value="14">2 weeks</option>
@@ -56,7 +56,7 @@
 <div id="sub_unsub_trends_loading"></div>  
 <div id="sub_unsub_trends"></div> 
 
-<h1>Recent Subscription Activity</h1> 
+<h3>Recent Subscription Activity</h3> 
 <!-- tmpl_include filtered_list_activity_widget.tmpl -->
 
 <!-- end list_activity_screen.tmpl --> 
