--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -319,7 +319,7 @@
 						</div>
 						<div class="row">
 							<div class="small-12 columns">
-								<ul class="button-group even-2">
+								<ul class="button-group right">
 								    <li>
 										<input 
 											type="button small" 
@@ -736,7 +736,7 @@
 						</div>
 					</div>
 	
-					<ul class="button-group even-2">
+					<ul class="button-group right">
 					    <li>
 							<input type="button"  class="success view_moderators button small" value="View Moderators (<!-- tmpl_var moderators_count -->)" >
 						</li>
@@ -843,7 +843,7 @@
 				</label>
 			</div>
 		</div>
-		<ul class="button-group even-2">
+		<ul class="button-group right">
 		    <li>
 				<input type="button"  class="success view_authorized_senders button small" value="View Authorized Senders (<!-- tmpl_var authorized_senders_count -->)">
 			</li>
