--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -1,8 +1,5 @@
 <!-- begin send_email_headers_widget.tmpl --> 
 
-	<a href="#" class="toggleDivs" data-target="additional_email_headers">
-		+/- Additional Headers
-	</a>
 
 	<div id="additional_email_headers">
 		
@@ -99,6 +96,15 @@
 		<!-- /tmpl_if -->	
 	<!-- /tmpl_if -->
 	</div>
+	
+	<div class="row">
+		<div class="small-12 columns">
+			<a href="#" class="toggleDivs" data-target="additional_email_headers">
+				+/- Additional Headers
+			</a>
+		</div>
+	</div>
+	
 </div> 
 
 <!-- begin send_email_headers_widget.tmpl --> 
