--- a/dada/templates/archive_index_screen.tmpl
+++ b/dada/templates/archive_index_screen.tmpl
@@ -1,8 +1,10 @@
 <!-- begin archive_index_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name --> Archives" --> 
+<!-- tmpl_set name="load_colorbox" value="1" -->
 
-<!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
+<!-- tmpl_include list_breadcrumbs_widget.tmpl -->
+<!-- tmpl_var archive_search_form -->
 
 <!-- tmpl_if entries --> 
 
@@ -11,10 +13,9 @@
 
 <!-- tmpl_else --> 
 
-    <p class="error">
-     Currently, there are no archived messages.
-    </p>
-
+    
+     There are currently no archived messages.
+    
 <!--/tmpl_if-->
 
 <!-- tmpl_include archive_footer_widget.tmpl -->
