--- a/dada/templates/archive_search_form.tmpl
+++ b/dada/templates/archive_search_form.tmpl
@@ -1,17 +1,19 @@
 <!-- begin archive_search_form.tmpl -->
 
 <form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <p>
-  <label for="keyword">
-   Search 
-  </label>
-  this list's archives:
-  <br >
-  <input type="text"   name="keyword" id="keyword" size="12" >
-  <input type="hidden" name="list" value="<!-- tmpl_var name="list" -->" >
+  <input type="hidden" name="list" value="<!-- tmpl_var list -->" >
   <input type="hidden" name="flavor"    value="search_archive" >
-  <input type="submit" class="success button" value="Search" >
- </p>
+  	<div class="row collapse">
+	    <div class="large-7 medium-7 columns">
+			&nbsp;
+		</div>
+	    <div class="large-3 medium-3 columns">
+		    <input type="text"   name="keyword" id="keyword" >
+		</div>
+	    <div class="large-2 medium-2 columns">
+			<input type="submit" class="button small postfix" value="Search" >
+		</div>
+	</div>
 </form>
 
 <!-- end archive_search_form.tmpl -->
