--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -30,28 +30,26 @@
    <nav class="top-bar" data-topbar role="navigation" id="admin_header">
         <ul class="title-area">
            <li class="name">
-             <h1>
 				<a href="<!-- tmpl_var PROGRAM_URL -->">
 					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" title="<!-- tmpl_var PROGRAM_NAME -->" alt="<!-- tmpl_var PROGRAM_NAME -->" >
 				</a>
-			  </h1>
            </li>
 	     <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
 		 </ul>
 		 
 		<!-- tmpl_if show_profile_widget --> 
 			<section class="top-bar-section">
-						<!-- tmpl_var profile_widget --> 
+				<!-- tmpl_var profile_widget --> 
 			</section> 
 		<!-- /tmpl_if --> 
 	</nav>
 
 <div class="row" >
-   <div class="small-12" style="background-color:#fff">
+   <div class="small-12 columns" id="list_content_area">
 	   
-		   <h1>
+		   <h3>
 			   <!-- tmpl_var title -->
-		   </h1>
+		   </h3>
 		
 		<!-- tmpl_if list_settings.list --> 
 			<!-- tmpl_if subscribed_to_list --> 
@@ -72,12 +70,15 @@
 				</a>
 			<!-- /tmpl_if --> 
 		<!-- /tmpl_if -->
+		
+		<div class="panel">   
+			   <!-- tmpl_var footer_props -->
+		</div> 
+		
+		
 	</div>
 </div> 
 
-<div class="panel">   
-	   <!-- tmpl_var footer_props -->
-</div> 
 
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
