--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -1,83 +1,92 @@
 <!-- begin send_archive_form_widget.tmpl --> 
 
-
 <a name="forward_to_a_friend"></a>
+
 <fieldset>
-	
-<legend>Forward to a Friend</legend>
+	<legend>
+		Forward to a Friend
+	</legend>
 
-
-
-<!-- tmpl_if send_archive_form_error --> 
-
-    <p class="error">
-     This form was filled out incorrectly.
-    </p>
-    
-<!-- /tmpl_if --> 
-
-
-
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post">
- <input type="hidden" name="list"    value="<!-- tmpl_var list -->" >
- <input type="hidden" name="entry"   value="<!-- tmpl_var id -->" > 
- <input type="hidden" name="flavor"  value="send_archive" > 
- <input type="hidden" name="process" value="true" > 
- 
- <p>
-  <label for="from_email">
-  Your email address:
-  </label>
-  <br > 
-  <input type="text" name="from_email" id="from_email" maxlength="1024" >
- </p>
- <p>
-  <label for="to_email">
-  Your friend's email address:
-  </label>
-  <br >
-  <input type="text" name="to_email" id="to_email" maxlength="1024" >
- </p>
- <p>
-  <label for="note">
-  Note:
-  </label>
-  <br >
-  <textarea rows="5" cols="40" name="note" id="note"></textarea>
- </p>
- 
- 
-
-
-<!-- tmpl_if captcha_fail --> 
-     <p class="error"> 
-      The letters you've submitted didn't seem to correspond to the letters in the image. Please try again:
-    </p>
-<!-- /tmpl_if --> 
-
-<!-- tmpl_if can_use_captcha --> 
-	<!-- tmpl_if CAPTCHA_string --> 
-	
-		<p>
-		 As the final step, please type in the string of letters that you see in the below image into the text box:
-		</p>
-	
-
-	<!-- tmpl_var CAPTCHA_string --> 
-	
+	<!-- tmpl_if send_archive_form_error --> 
+		<div class="alert-box warning radius">
+			This form was filled out incorrectly.
+		</div>
 	<!-- /tmpl_if --> 
-	
-<!-- /tmpl_if --> 
+	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post">
 
+		<input type="hidden" name="list"    value="<!-- tmpl_var list -->" >
+		<input type="hidden" name="entry"   value="<!-- tmpl_var id -->" > 
+		<input type="hidden" name="flavor"  value="send_archive" > 
+		<input type="hidden" name="process" value="true" > 
 
-<input type="submit" class="success button expand" value="Forward to a Friend" >
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+				<label 
+					class="medium-only-text-right large-only-text-right"
+					for="from_email"
+				>
+					Your email address
+				</label>
+			</div>
+			<div class="large-9 medium-9 columns">
+				<input type="text" name="from_email" id="from_email" maxlength="1024" >
+			</div>
+		</div> 
 
-</form>
-
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+				<label 
+					class="medium-only-text-right large-only-text-right"
+					for="to_email"
+				>
+					Your friend's email address:
+				</label>
+			</div>
+			<div class="large-9 medium-9 columns">
+				<input type="text" name="to_email" id="to_email" maxlength="1024">
+			</div>
+		</div> 
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+				<label 
+					class="medium-only-text-right large-only-text-right"
+					for="note"
+				>
+					Note:
+				</label>
+			</div>
+			<div class="large-9 medium-9 columns">
+				<textarea name="note" id="note"></textarea>
+			</div>
+		</div> 
+		
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+				&nbsp;
+			</div>
+			<div class="large-9 medium-9 columns">			
+				<!-- tmpl_if captcha_fail --> 
+					<div class="alert-box warning radius">
+						The letters you've submitted didn't seem to correspond to the letters in the image. Please try again:
+					</div>
+				<!-- /tmpl_if --> 
+				<!-- tmpl_if can_use_captcha --> 
+					<!-- tmpl_if CAPTCHA_string --> 
+						<!-- tmpl_var CAPTCHA_string --> 
+					<!-- /tmpl_if --> 
+				<!-- /tmpl_if --> 
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+				&nbsp;
+			</div>
+			<div class="large-9 medium-9 columns">			
+				<input type="submit" class="success button expand" value="Forward to a Friend" >
+			</div>
+		</div>
+	</form>
 </fieldset> 
 
-
-
-
-<!-- end send_archive_form_widget.tmpl  --> 
-
+<!-- end send_archive_form_widget.tmpl  -->
