--- a/dada/templates/list_archive_search_form_widget.tmpl
+++ b/dada/templates/list_archive_search_form_widget.tmpl
@@ -1,7 +1,7 @@
-<!-- begin archive_search_form.tmpl -->
+<!-- begin list_archive_search_form_widget.tmpl -->
 
 <form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-  <input type="hidden" name="list" value="<!-- tmpl_var list -->" >
+  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" >
   <input type="hidden" name="flavor"    value="search_archive" >
   	<div class="row collapse">
 	    <div class="large-7 medium-7 columns">
@@ -16,4 +16,4 @@
 	</div>
 </form>
 
-<!-- end archive_search_form.tmpl -->
+<!-- end list_archive_search_form_widget.tmpl -->
