More work making the user screens and work better. In fact, much better.

--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -331,10 +331,12 @@
 		</div>
 	    <!-- /tmpl_if --> 
 		
-		  <ul class="button-group right">
-			  <li><input type="reset"  class="button warning" value="Clear Changes"></li>
-			  <li><input type="submit"        value="Verify Address..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="button disabled"<!-- tmpl_else -->class="button success"<!-- /tmpl_if -->></li>
-		  </ul>
+		<div class="clearfix">
+			<ul class="button-group right">
+				<li><input type="reset"  class="button warning" value="Clear Changes"></li>
+				<li><input type="submit"        value="Verify Address..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="button disabled"<!-- tmpl_else -->class="button success"<!-- /tmpl_if -->></li>
+			</ul>
+		</div>
 	</form> 
 	
 		
