--- a/dada/templates/default_screen.tmpl
+++ b/dada/templates/default_screen.tmpl
@@ -16,10 +16,12 @@
 <!--/tmpl_if-->
 
 <!-- tmpl_if visible_lists --> 
-<div id="modal_subscribe_form">
-    <!-- tmpl_var subscription_form --> 
-</div> 
 
+<div class="panel">
+	<div id="modal_subscribe_form">
+	    <!-- tmpl_var subscription_form --> 
+	</div> 
+</div>
     <h3>
      Available Mailing Lists:
     </h3>
