--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -47,9 +47,9 @@
 <div class="row" >
    <div class="small-12 columns" id="list_content_area">
 	   
-		   <h3>
+		   <h2>
 			   <!-- tmpl_var title -->
-		   </h3>
+		   </h2>
 		
 		<!-- tmpl_if list_settings.list --> 
 			<!-- tmpl_if subscribed_to_list --> 
@@ -83,8 +83,8 @@
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.topbar.js"></script>
-
-
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.equalizer.js"></script>
+  
 <script>
 	$(document).foundation();
 </script>
