--- a/dada/templates/search_archive_screen.tmpl
+++ b/dada/templates/search_archive_screen.tmpl
@@ -48,6 +48,6 @@
 <!-- tmpl_var search_form -->
 <hr >
 
-<!-- tmpl_var archive_subscribe_form -->
+<!-- tmpl_var subscription_form -->
 
 <!-- end search_archive_screen.tmpl -->
