--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -178,12 +178,12 @@
 				value="&#8855;" 
 				<!-- tmpl_unless is_paused -->
 					<!-- tmpl_if sending_done -->
-						disabled="disabled" class="button small disabled"
+						disabled="disabled" class="button tiny disabled"
 					<!-- tmpl_else -->
-						class="button small alert killMonitoredSending"
+						class="button tiny alert killMonitoredSending"
 					<!--/tmpl_if -->
 				<!-- tmpl_else -->
-					class="button small alert killMonitoredSending"
+					class="button tiny alert killMonitoredSending"
 				<!--/tmpl_unless --> 
 				title="Click to permanently STOP this mass mailing"
 			>
