--- a/dada/templates/archive_index_screen.tmpl
+++ b/dada/templates/archive_index_screen.tmpl
@@ -3,21 +3,19 @@
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name --> Archives" --> 
 <!-- tmpl_set name="load_colorbox" value="1" -->
 
-<!-- tmpl_include list_breadcrumbs_widget.tmpl -->
-<!-- tmpl_var archive_search_form -->
+<!-- tmpl_if list_settings.archive_search_form -->
+	<!-- tmpl_include list_archive_search_form_widget.tmpl -->
+<!-- /tmpl_if -->
 
 <!-- tmpl_if entries --> 
-
-
     <!-- tmpl_include archive_list_widget.tmpl -->
-
 <!-- tmpl_else --> 
-
-    
-     There are currently no archived messages.
-    
+	<div class="alert-box info radius">
+		There are currently no archived messages.
+    </div>
 <!--/tmpl_if-->
 
-<!-- tmpl_include archive_footer_widget.tmpl -->
-
+	
+<!-- tmpl_include list_page_info_widget.tmpl -->
+	
 <!-- end archive_index_screen.tmpl -->
