--- a/dada/templates/list_page_screen.tmpl
+++ b/dada/templates/list_page_screen.tmpl
@@ -3,124 +3,34 @@
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name -->" -->
 <!-- tmpl_set name="load_colorbox" value="1" -->
 
-
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
-<!-- tmpl_if error_no_email --> 
+<!-- tmpl_include list_page_info_widget.tmpl -->
 
-	<div class="alert-box info radius">
-    <p>
-     Please fill in your email address in the form below:
-    </p>
-	</div>
-<!--/tmpl_if--> 
 
-	<div id="modal_subscribe_form">
-		<!-- tmpl_var subscription_form --> 
-	</div> 
+<!-- tmpl_if list_settings.show_archives -->	
 
-<div>
+	<h3>
+		Archived Messages
+	</h3>
 	
-<h2>Mailing List Information:</h2>
-
-<ul> 
+	<!-- tmpl_if list_settings.archive_search_form -->
+		<!-- tmpl_include list_archive_search_form_widget.tmpl -->
+	<!-- /tmpl_if -->
 	
+	<!-- tmpl_var html_archive_list -->
 
-	<!-- tmpl_if list_settings.private_list --> 
-        <li>
-			<p>
-				This mailing list is a private mailing list. There may be additional steps in order to join, 
-				and the List Owner controls who may leave the mailing list. 
-			</p>
-		</li>
-	<!-- tmpl_else --> 
-        <li>
-    		<p>
-    			This mailing list is a public mailing list - anyone may join or leave, at any time.
-    		</p>
-    	</li>		
-    <!-- /tmpl_if -->
-	
-	<!-- tmpl_if list_settings.enable_subscription_approval_step --> 
-		<li>
-			<p>
-				This mailing list requires approval from the List Owner, before subscriptions are finalized.
-			</p>
-		</li>
-	<!-- /tmpl_if --> 
-	
-    <!-- tmpl_if list_settings.group_list --> 
-        <li>
-         <p>
-			This mailing list is a group discussion list
-         
-            <!-- tmpl_if list_settings.enable_moderation --> 
-                (moderated)
-            <!-- tmpl_else -->
-                (unmoderated)
-            <!-- /tmpl_if --> 
-         </p>
-        </li>
+    <!-- tmpl_if list_settings.publish_archives_rss --> 
+ 	    <!-- tmpl_include newsfeed_widget.tmpl -->
+    <!-- /tmpl_if --> 
 
-		<li>
-			<!-- this is strange, as the bare link will be wrapped with a HTML link --> 
-			<p>Start a new thread, email: (<!-- tmpl_var list_settings.discussion_pop_email -->)</p>
-		</li>
-			
-    <!-- tmpl_else --> 
-        
-        <li>
-         <p>
-			This mailing list is announce-only.
-         </p>
-		</li>
-
-
-     <!-- /tmpl_if --> 
-</ul>
-
-
- <!-- tmpl_var list_settings.info -->
-
-
-
-
-</div> 
-
-
-
-
-	
-	<h2>
-	 Privacy Policy:
-	</h2>
-	<p>
-	 <!-- tmpl_var list_settings.privacy_policy -->
-	</p>
-	
-
-<!-- tmpl_if list_settings.show_archives -->
-	
-	<h2>Archives:</h2> 
-	
-	
-		<!-- tmpl_var html_archive_list -->
-	    <!-- tmpl_if list_settings.publish_archives_rss --> 
-	 	    <!-- tmpl_include newsfeed_widget.tmpl -->
-	    <!-- /tmpl_if --> 
-
-
-
-    
 <!-- /tmpl_if -->
 
 <!-- tmpl_if SHOW_ADMIN_LINK -->
 	
-	<p class="text-center">
+	<p class="text-center small">
 	 <a href="<!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var SIGN_IN_FLAVOR_NAME -->/<!-- tmpl_var list_settings.list -->/">
-	  <strong>
 	   Administration
-	  </strong>
 	 </a>
 	</p>
 	
