--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -4,19 +4,7 @@
 	<input type="hidden" name="flavor" id="f_s" value="subscribe" >
 
 	    <div class="row">
-	        <div class="small-10 columns small-centered medium-centered large-centered">
-		<!-- tmpl_if show_fieldset --> 
-						<div class="panel">
-
-				<!-- tmpl_if comment -->
-					<legend>
-						 Subscribe 
-						 <!-- tmpl_if single_list --> 
-						 	to <!-- tmpl_var list_settings.list_name -->
-						<!-- /tmpl_if -->
-					</legend>
-				<!-- /tmpl_if -->
-		<!-- /tmpl_if -->
+	        <div class="small-12 columns">
 
 		<!-- tmpl_if single_list --> 
 		    <input 
@@ -48,7 +36,7 @@
     
 		    <!-- tmpl_else --> 
 		      <div class="row">
-		        <div class="large-3 medium-3 columns">    		
+		        <div class="large-4 medium-4 columns">    		
 			        <label 
 						class="medium-only-text-right large-only-text-right"
 						for="list" 
@@ -56,7 +44,7 @@
 			       		Mailing List 
 			        </label>
 		        </div>
-		        <div class="large-9 medium-9 columns">
+		        <div class="large-8 medium-8 columns">
 					<!-- tmpl_var list_popup_menu -->
 				</div>
 			</div>
@@ -66,7 +54,7 @@
 
 		  
 			      <div class="row">
-			        <div class="large-3 medium-3 columns">
+			        <div class="large-4 medium-4 columns">
 						<label 
 							class="medium-only-text-right large-only-text-right"
 					  		for="email" 
@@ -74,7 +62,7 @@
 							Email Address
 						</label>
 			        </div>
-			        <div class="large-9 medium-9 columns">
+			        <div class="large-8 medium-8 columns">
 						<!-- tmpl_if profile_logged_in --> 
 							<!-- tmpl_var email escape=HTML -->
 							<input 
@@ -102,7 +90,7 @@
 			<!-- tmpl_if subscriber_fields --> 
 			    <!-- tmpl_loop subscriber_fields -->
 					<div class="row">
-						<div class="large-3 medium-3 columns">
+						<div class="large-4 medium-4 columns">
 			
 					        <label 
 								class="medium-only-text-right large-only-text-right"
@@ -115,7 +103,7 @@
 								<!-- /tmpl_if --> 
 							</label>
 						</div> 
-						<div class="large-9 medium-9 columns">
+						<div class="large-8 medium-8 columns">
 					        <input 
 								type="text" 
 								name="<!-- tmpl_var name escape=HTML -->" 
@@ -132,10 +120,10 @@
 		<!-- /tmpl_if -->
 
 		<div class="row">
-			<div class="large-3 medium-3 columns">
+			<div class="large-4 medium-4 columns">
 				&nbsp;
 			</div> 
-			<div class="large-9 medium-9 columns">
+			<div class="large-8 medium-8 columns">
 						<input 
 							type="submit" 
 							value="Subscribe" 
@@ -149,11 +137,7 @@
 		    <p style="font-size:10px;font-family:Verdana,Arial,sans-serif;"><a href="http://dadamailproject.com" target="_blank" style="font-size:10px;font-family:Verdana,Arial,sans-serif;">Powered by <!-- tmpl_var name="PROGRAM_NAME" --> <!-- tmpl_var VER --> Mailing List Manager</a></p>
 		<!-- /tmpl_if --> 
 
-		<!-- tmpl_if show_fieldset --> 
-			<!-- tmpl_if comment --></fieldset><!-- /tmpl_if -->
-			</div>
-		<!-- /tmpl_if --> 
-		</div>
+	</div>
 	</div>
 </form> 
 
