--- a/dada/templates/list_page_info_widget.tmpl
+++ b/dada/templates/list_page_info_widget.tmpl
@@ -1,3 +1,5 @@
+<!-- begin list_page_info_widget.tmpl -->
+
 <div class="row" data-equalizer>
 	<div class="large-6 large-push-6 columns panel" data-equalizer-watch>
 		<!-- tmpl_if error_no_email --> 
@@ -67,3 +69,5 @@
 		</p>		
 	</div>
 </div> 
+
+<!-- end list_page_info_widget.tmpl -->
