--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -210,12 +210,12 @@
 
 
 
+<div class="row">
+   <div class="small-12 columns" id="footer">
+		<p><!-- tmpl_var footer_props default="Dada Mail Copyright 1999-2015 Simoni Creative" --></p>   
+	</div>
+</div>
 
-	<div id="Footer">
-		<div id="FooterPadding">
-			<p><!-- tmpl_var footer_props --></p>
-		</div>
-	</div> 
 
 
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
