--- a/dada/templates/list/subscribed.tmpl
+++ b/dada/templates/list/subscribed.tmpl
@@ -2,7 +2,8 @@
 
 <!-- tmpl_set name="title" value="Your Mailing List Subscription is Successful" -->
 
-<p>You are now subscribed to the following mailing list:</p>
+<p>
+	You are now subscribed to the following mailing list:</p>
 
 <blockquote>
  <p>
@@ -27,9 +28,11 @@
     <form action="<!-- tmpl_var PROGRAM_URL -->" method="get">
         <input type="hidden" name="flavor" value="profile" >
         <p class="text-center">
-         <input type="submit" value="Visit Your Profle" class="success bigger_button" > 
-<br >
-to view all your subscriptions, and change your delivery preferences.
+         <input type="submit" value="Visit Your Profle" class="success large button" > 
+		</p>
+
+<p>		
+And view all your mailing list subscriptions and change your delivery preferences.
 
 </p>
     </form>
