--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -70,14 +70,17 @@
 				</a>
 			<!-- /tmpl_if --> 
 		<!-- /tmpl_if -->
-		
-		<div class="panel">   
-			   <!-- tmpl_var footer_props -->
-		</div> 
-		
-		
 	</div>
 </div> 
+
+
+<div class="row">
+   <div class="small-12 columns" id="footer">
+		<p><!-- tmpl_var footer_props default="Dada Mail Copyright 1999-2015 Simoni Creative" --></p>   
+	</div>
+</div>
+
+
 
 
 
