--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -39,7 +39,7 @@
 					class="medium-only-text-right large-only-text-right"
 					for="to_email"
 				>
-					Your friend's email address:
+					Your friend's email address
 				</label>
 			</div>
 			<div class="large-9 medium-9 columns">
@@ -52,7 +52,7 @@
 					class="medium-only-text-right large-only-text-right"
 					for="note"
 				>
-					Note:
+					Note
 				</label>
 			</div>
 			<div class="large-9 medium-9 columns">
